--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <img src="https://via.placeholder.com/200x160" alt="Shell Shockers">
             <h3>Shell Shockers</h3>
         </div>
-        <div class="game-card" onclick="openFullscreen('https://diep.io/')">
+        <div class="game-card" onclick="openFullscreen('https://freeflowastroid.df.wikilegia.com//')">
             <img src="https://via.placeholder.com/200x160" alt="Diep.io">
             <h3>Diep.io</h3>
             <!-- copy one of these to add new games, change link to wanted game, and img to a links favicon (icon on the tab) the alt will just show the text if img doesnt work (change the text to work as well) -->
